<?xml version="1.0"?>
<package>
  <name>hsvhfb</name>
  <version>0.0.0</version>
  <description>HSV tutorial package package</description>
  <maintainer email="herve.frezza-buet@centralesupelec.fr">Herve Frezza-Buet</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>
